fix wording and grammar

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -31,14 +31,14 @@
     <string name="label_send_success">Erfolgreich gesendet</string>
     <string name="label_send_done">Fertig</string>
 
-    <string name="label_receive_info_gen_qr_code">Berühren für QR Code</string>
+    <string name="label_receive_info_gen_qr_code">Berühren für QR-Code</string>
     <string name="info_send_prio_fees">Höhere Priorität = Höhere Gebühr</string>
 
     <string name="info_xmrto_enabled">BTC Zahlung aktiviert, tippe für mehr Infos.</string>
 
     <string name="info_xmrto"><![CDATA[
         <b>Du hast eine BTC Adresse eingegeben.</b><br/>
-        <i>Du wirst XMR versenden und der Empfänger durch den XMR.TO Service BTC erhalten.</i>
+        <i>Du wirst XMR versenden und der Empfänger durch den <b>XMR.TO</b> Service BTC erhalten.</i>
     ]]></string>
 
     <string name="info_send_xmrto_success_order_label">XMR.TO Auftrag</string>
@@ -93,7 +93,7 @@
 
     <string name="label_send_btc_details">Tippe für mehr Details</string>
     <string name="label_send_btc_xmrto_info">Besuche XMR.TO für Support &amp; Nachverfolgung</string>
-    <string name="label_send_txinfo">Transaktions Details anschauen</string>
+    <string name="label_send_txinfo">Transaktionsdetails anschauen</string>
     <string name="label_send_btc_xmrto_key_lb">Geheimer Schlüssel\nXMR.TO</string>
     <string name="label_send_btc_xmrto_key">XMR.TO Geheimer Schlüssel</string>
     <string name="label_send_btc_address">BTC Zieladresse</string>
@@ -102,9 +102,9 @@
 
     <string name="label_send_btc_retry">Berühre zum Wiederholen</string>
 
-    <string name="label_send_txid">Transaktions ID</string>
+    <string name="label_send_txid">Transaktions-ID</string>
     <string name="label_send_address">Zieladresse</string>
-    <string name="label_send_payment_id">Zahlungs ID</string>
+    <string name="label_send_payment_id">Zahlungs-ID</string>
     <string name="label_send_notes">Notizen</string>
 
     <string name="backup_progress">Backup wird erstellt</string>
@@ -121,22 +121,22 @@
     <string name="delete_failed">Löschen fehlgeschlagen!</string>
     <string name="rename_failed">Umbenennen fehlgeschlagen!</string>
 
-    <string name="label_daemon">Knoten</string>
+    <string name="label_daemon">Node</string>
     <string name="prompt_daemon">([&lt;user&gt;:&lt;pass&gt;@]&lt;daemon&gt;[:&lt;port&gt;])</string>
     <string name="prompt_mainnet">Netzwerkauswahl</string>
     <string name="connect_stagenet">StageNet</string>
     <string name="connect_testnet">TestNet</string>
     <string name="connect_mainnet">MainNet</string>
-    <string name="status_walletlist_loading">Lade Wallet Liste</string>
+    <string name="status_walletlist_loading">Lade Wallet-Liste</string>
     <string name="status_wallet_loading">Lade Wallet &#8230;</string>
     <string name="status_wallet_unloading">Speichere Wallet</string>
     <string name="status_wallet_unloaded">Wallet gespeichert</string>
     <string name="status_wallet_unload_failed">Wallet Speicherung fehlgeschlagen!</string>
     <string name="status_wallet_connecting">Verbinde &#8230;</string>
-    <string name="status_wallet_connect_failed">Knoten Verbindung fehlgeschlagen!\nPrüfe username/password</string>
-    <string name="status_wallet_connect_timeout">Knoten Verbindung Zeit überschritten!\nNochmal oder anderen Knoten versuchen.</string>
-    <string name="status_wallet_node_invalid">Knoten ungültig!\nVersuche anderen.</string>
-    <string name="status_wallet_connect_ioex">Kann Knoten nicht erreichen!\nNochmal oder anderen Knoten versuchen.</string>
+    <string name="status_wallet_connect_failed">Verbindung zum Node fehlgeschlagen!\nPrüfe Username/Passwort</string>
+    <string name="status_wallet_connect_timeout">Node Zeitüberschreitung!\nNochmal oder anderen Node versuchen.</string>
+    <string name="status_wallet_node_invalid">Node ungültig!\nVersuche anderen.</string>
+    <string name="status_wallet_connect_ioex">Kann Node nicht erreichen!\nNochmal oder anderen Node versuchen.</string>
 
     <string name="status_working">Arbeite daran &#8230;</string>
     <string name="status_wallet_disconnected">Verbindung getrennt</string>
@@ -189,15 +189,15 @@
     <string name="message_strorage_not_permitted">Wir brauchen die Zugriffsrechte auf den externen Speicher wirklich!</string>
     <string name="message_camera_not_permitted">Keine Kamera = Kein QR scannen!</string>
 
-    <string name="label_copy_viewkey">View Key</string>
+    <string name="label_copy_viewkey">View-Key</string>
     <string name="label_copy_address">Öffentliche Adresse</string>
     <string name="label_copy_xmrtokey">XMR.TO Schlüssel</string>
-    <string name="message_copy_viewkey">View Key in Zwischenablage kopiert!</string>
+    <string name="message_copy_viewkey">View-Key in Zwischenablage kopiert!</string>
     <string name="message_copy_xmrtokey">XMR.TO Schlüssel in Zwischenablage kopiert!</string>
     <string name="message_copy_address">Wallet Adresse in Zwischenablage kopiert!</string>
     <string name="message_copy_txid">Transaktions-ID in Zwischenablage kopiert!</string>
     <string name="message_noselect_seed">Auswahl des Seeds aus Sicherheitsgründen deaktiviert!</string>
-    <string name="message_noselect_key">Auswahl des spend keys aus Sicherheitsgründen deaktiviert!</string>
+    <string name="message_noselect_key">Auswahl des Spend-Keys aus Sicherheitsgründen deaktiviert!</string>
     <string name="message_nocopy">Kopieren aus Sicherheitsgründen deaktiviert!</string>
 
     <string name="message_exchange_failed">Umtausch-Rate nicht verfügbar!\nNutze XMR/XMR oder versuche es noch einmal</string>
@@ -228,16 +228,16 @@
     <string name="generate_wallet_type_view">View</string>
 
     <string name="generate_address_hint">Öffentliche Adresse</string>
-    <string name="generate_viewkey_hint">View Key</string>
-    <string name="generate_spendkey_hint">Spend Key</string>
+    <string name="generate_viewkey_hint">View-Key</string>
+    <string name="generate_spendkey_hint">Spend-Key</string>
     <string name="generate_mnemonic_hint">25-Wörter mnemonischer Seed</string>
     <string name="generate_restoreheight_hint">Wiederherstellungshöhe oder Datum (JJJJ-MM-TT)</string>
 
     <string name="generate_wallet_label">Wallet</string>
     <string name="generate_password_label">Passwort</string>
-    <string name="generate_address_label">ÖFfentliche Adresse</string>
-    <string name="generate_viewkey_label">View Key</string>
-    <string name="generate_spendkey_label">Spend Key</string>
+    <string name="generate_address_label">Öffentliche Adresse</string>
+    <string name="generate_viewkey_label">View-Key</string>
+    <string name="generate_spendkey_label">Spend-Key</string>
     <string name="generate_mnemonic_label">mnemonischer Seed</string>
     <string name="generate_restoreheight_label">Wiederherstellungshöhe:</string>
 
@@ -248,10 +248,10 @@
     <string name="send_amount_btc_xmr">%1$s (indicative)</string>
 
     <string name="send_address_hint">Empfänger XMR oder BTC Adresse</string>
-    <string name="send_paymentid_hint">Zahlungs ID (optional)</string>
+    <string name="send_paymentid_hint">Zahlungs-ID (optional)</string>
     <string name="send_amount_hint">0.00</string>
     <string name="send_notes_hint">Private Notizen (optional)</string>
-    <string name="send_priority_hint">Tx Priorität</string>
+    <string name="send_priority_hint">Tx-Priorität</string>
     <string name="send_mixin_hint">Mixin</string>
     <string name="send_sweep_hint">Sweep</string>
     <string name="send_generate_paymentid_hint">Generieren</string>
@@ -261,8 +261,8 @@
     <string name="send_send_label">Gib meine wertvollen Moneroj aus</string>
     <string name="send_send_timed_label">Gib meine wertvollen Moneroj aus (%1$s)</string>
     <string name="send_really_send_hint">Letzter Schritt - Bestätigen!</string>
-    <string name="send_qr_invalid">Kein QR Code</string>
-    <string name="send_qr_address_invalid">Kein gültiger Zahlungs QR code</string>
+    <string name="send_qr_invalid">Kein QR-Code</string>
+    <string name="send_qr_address_invalid">Kein gültiger Zahlungs-QR-Code</string>
     <string name="send_address_invalid">Keine gültige Adresse</string>
     <string name="send_preparing_progress">Bereite Transaktion vor</string>
     <string name="send_title">Senden</string>
@@ -299,7 +299,7 @@
     <string name="tx_timestamp">Zeitstempel</string>
     <string name="tx_id">TX-ID</string>
     <string name="tx_id_btc">TX-ID\n(BTC)</string>
-    <string name="tx_key">TX Schlüssel</string>
+    <string name="tx_key">TX-Schlüssel</string>
     <string name="tx_destination">Ziel</string>
     <string name="tx_destination_btc">Ziel\n(BTC)</string>
     <string name="tx_paymentId">Zahlungs-ID</string>
@@ -321,9 +321,9 @@
     <string name="tx_pending">AUSSTEHEND</string>
     <string name="tx_failed">FEHLGESCHLAGEN</string>
 
-    <string name="receive_generate_hint">Zeig mir den QR Code</string>
+    <string name="receive_generate_hint">Zeig mir den QR-Code</string>
     <string name="receive_paymentid_button">Generieren</string>
-    <string name="receive_paymentid_hint">Zahlungs ID (optional)</string>
+    <string name="receive_paymentid_hint">Zahlungs-ID (optional)</string>
     <string name="receive_amount_hint">Menge</string>
     <string name="receive_amount_xmr_hint">XMR</string>
     <string name="receive_cannot_open">Konnte Wallet nicht öffnen!</string>
